<resources>
    <string name="app_name">STUBO</string>
    <string name="facebook_app_id">421861378548252</string>
    <string name="fb_login_protocol_scheme">fb421861378548252</string>
    <string name="trang_chu">Trang Chủ</string>
    <string name="danh_muc">Danh Mục</string>
    <string name="tu_sach">Tủ Sách</string>
    <string name="hoat_dong">Hoạt Động</string>
    <string name="ca_nhan">Cá Nhân</string>
    <string name="nhan_back">Nhấn thêm 1 lần nữa để thoát !</string>
    <string name="xem_tat_ca">Xem tất cả </string>
    <string name="sach_moi">Sách Mới</string>
    <string name="khuyen_doc">Sách Khuyên đọc</string>
    <string name="van_hoc_trongnuoc">Văn Học Trong Nước</string>
    <string name="nha_xuat_ban">Nhà Xuất Bản</string>
    <string name="album_sach">Bộ Sách Hay Nhất</string>
    <string name="doc_sach">Đọc Sách</string>
    <string name="tom_tat_noi_dung">Nội dung sách</string>
    <string name="chia_se_cam_nhan">Chia sẻ cảm nhận</string>
    <string name="binh_luan">Bình Luận</string>
    <string name="xem_them_nhan_xet">Xem thêm nhận xét</string>
    <string name="ten_tac_gia">Tác giả:</string>
    <string name="nha_xuat_ban_kitu">NXB:</string>
    <string name="ngay_phat_hanh">Ngày phát hành:</string>
    <string name="so_trang">Số trang:</string>
    <string name="viet_nam_dong">vnđ</string>
    <string name="chi_tiet_sach">Chi tiết sách</string>
    <string name="danh_gia">Đánh Giá</string>
    <string name="noi_dung">Nội dung</string>
    <string name="gui_danh_gia">Gửi đánh giá</string>
    <string name="nhan_xet_khac">Nhận xét khác</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="hoac">Hoặc</string>
    <string name="goi_thue">Gói Thuê</string>
    <string name="tieu_de_thanh_toan">Bạn có thể chọn các hình thức mua sách dưới đây </string>
    <string name="muoihai_thang"> 12 Tháng</string>
    <string name="toi_uu">Lựa chọn tối ưu cho bạn đọc</string>
    <string name="ba_thang"> 3 Tháng</string>
    <string name="thanh_toan_qua">Thanh Toán qua.....</string>
    <string name="sau_thang"> 6 Tháng</string>
    <string name="uu_dai">Lựa chọn ưu đãi cho bạn đọc</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="thoi_han">Thời hạn:</string>
    <string name="gia_tien">Giá tiền:</string>
    <string name="so_du">Số dư:</string>
    <string name="say_yes">Đồng ý</string>
    <string name="say_no">Hủy</string>
    <string name="chon_goi_mua_sach">Chọn gói mua</string>
    <string name="xac_nhan">Xác nhận mua sách</string>
    <string name="tai_khoan_co">Tài Khoản có:</string>
    <string name="thanh_toan_cho_time">Thanh toán cho:</string>
    <string name="thanh_toan_bang_xu">Thanh toán bằng xu</string>
    <string name="thanh_toan_bang_momo">Thanh toán qua ví momo</string>
    <string name="thanh_toan_bang_visa">Thanh toán bằng thẻ quốc tế</string>
    <string name="thanh_toan_qua_the_cao">Thanh toán bằng thẻ cào</string>
    <string name="vinh_vien">Vĩnh viễn</string>
    <string name="so_du_taikhoan">Số Dư</string>
    <string name="sach">Sách</string>
    <string name="nguoi_theo_doi">Người theo dõi</string>
    <string name="nguoi_dang_theo_doi">Người đang theo dõi</string>
    <string name="nap_tai_khoan">Nạp tài khoản</string>
    <string name="sach_da_doc">Sách đã đọc</string>
    <string name="sach_yeu_thich">Sách yêu thích</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="user_name_register">Tên đăng nhập (*)</string>
    <string name="password">Mật khẩu</string>
    <string name="password_register">Mật khẩu (*)</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="re_password_register">Nhập lại mật khẩu (*)</string>
    <string name="login">Đăng Nhập</string>
    <string name="register">Đăng Kí</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="dang_ky_ngay">Đăng ký ngay</string>
    <string name="Nhap_email">Nhập email (*)</string>
    <string name="gui">Gửi</string>
    <string name="night_mode">Chế độ</string>
    <string name="zoom_in">Phóng to</string>
    <string name="zoom_out">Thu Nhỏ</string>
    <string name="xoay">Xoay</string>
    <string name="page">Trang</string>
    <string name="chuongsach">Chương Sách</string>
    <string name="trang_da_luu">Trang Đã lưu</string>
    <string name="ngay">Ngày</string>
    <string name="internet">Internet không hiện có, nhấp thử lại !</string>
    <string name="openinternet">Bạn cần có Internet để thực hiện chức năng này!</string>
    <string name="openinternet_readbook">Bạn cần có Internet để tải sách!</string>
    <string name="notempty">Vui lòng không bỏ trống!</string>
    <string name="taisach">Đang tải sách, vui lòng chờ !</string>
    <string name="vuilongcho">Vui lòng chờ !</string>
</resources>
