<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:theme="@style/AppTheme">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/search_background">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/search_background"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:text="App đọc sách"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/search_white_18" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/pager_slider"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>

                    <android.support.design.widget.TabLayout
                        android:id="@+id/indicator_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/pager_slider"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:tabBackground="@drawable/indicator_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp">

                    </android.support.design.widget.TabLayout>
                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="@string/sach_moi"
                            android:textAllCaps="true"
                            android:textStyle="" />

                        <TextView
                            android:id="@+id/xemtatca_sachmoi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/xem_tat_ca" />


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_sachmoi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorPrimary"></View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/album_sach"
                    android:textAllCaps="true"
                    android:textStyle="" />
                <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
                    android:id="@+id/album_sach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:coverHeight="150dp"
                    app:coverWidth="130dp"
                    app:maxScaleFactor="1.5"
                    app:reflectionGap="0px"
                    app:scalingThreshold="0.5"
                    app:rotationThreshold="0.5"
                    app:spacing="0.6"/>
                <TextSwitcher

                    android:id="@+id/title"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextSwitcher>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorPrimary"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="@string/van_hoc_trongnuoc"
                            android:textAllCaps="true"
                            android:textStyle="" />

                        <TextView
                            android:id="@+id/xemtatca_vanhoctrongnuoc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/xem_tat_ca" />


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_vanhoctrongnuoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorPrimary"></View>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:text="@string/nha_xuat_ban"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView

                    android:id="@+id/recycle_nhaxuatban"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorPrimary"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:gravity="center"

                            android:text="@string/khuyen_doc"
                            android:textAllCaps="true"
                            android:textStyle="" />


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_sachkhuyendoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:spanCount="6" />
                </LinearLayout>


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</FrameLayout>